CustomObjects/objects/blng__CreditNote__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>AccountCreditNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Allocations__c</fullName>
        <label>Allocations</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Allocations__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c -  blng__Allocations__c +  blng__Unallocations__c -  blng__Refunds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes (BillToContact)</relationshipLabel>
        <relationshipName>BillToContactCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteDate__c</fullName>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Refunds__c</fullName>
        <label>Refunds</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Refunds__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RelatedInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>InvoiceCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <summarizedField>blng__CreditNoteLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__CreditNoteLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Unallocations__c</fullName>
        <label>Unallocations</label>
        <summarizedField>blng__CreditNoteLine__c.blng__Unallocations__c</summarizedField>
        <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__CreditNoteDate__c</columns>
        <columns>blng__TotalAmount__c</columns>
        <columns>blng__Allocations__c</columns>
        <columns>blng__Unallocations__c</columns>
        <columns>blng__Balance__c</columns>
        <columns>blng__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>